@startuml

package adk.async {

interface Message {

+Invoke()
+Reject(error)

}

interface Context {

Submitted messages either
invoked or rejected
..
+{static}{thread_local} current

+Submit(Message)
+ResumeIn()
+ResumeIn(func)
}

Message <|-- Task
class Task<T> {
    +constructor(() -> T)
    +constructor(suspend () -> T)
    +result: Deferred<T>
}

interface Awaitable {
    +Await(): T
}

Awaitable <|-- Deferred

class Deferred<T> {
    +SetResult(T)
    +SetError(Throwable)
    +{static}ForResult(T)
    +{static}ForError(Throwable)
    +Subscribe(callback)

    ..
    Task extensions
    +ChainTask(callback, context): Deferred<U>
    +ChainFinalizer(callback, context): Deferred<T>

    {field}-subscribers: Callback[]
}

class Observable::Source {
}

class Observable {
}

class Observable::Subscriber {
}

}

package kotlin.coroutines {

class Continuation {
    +resume(value)
    +resumeWithException(exception)
}

class Globals {
    +suspendCoroutine()
    +createCoroutine(completion)
    #suspendCoroutineOrReturn()
    #suspendCoroutineUninterceptedOrReturn()
    #createCoroutineUnchecked()
}

}

@enduml
